# wotfg

./: .gitignore  Cargo.toml  README.md
assets/: item_defs.ron  item_transition_defs.ron  stat_defs.ron  tile_defs.ron
src/: ids.rs  input.rs  main.rs  resources.rs  world.rs
src/states/: curses_crafting.rs  curses_inventory.rs  curses_main.rs  data.rs  load.rs  mod.rs
src/systems/: center_cursor.rs  client_start_craft.rs  crafting.rs  crafting_input.rs  cursor_move.rs  input_to_player_action.rs  load_chunk.rs  mine.rs  mod.rs  player_join_leave.rs  player_move.rs  quick_select.rs  send_chunk_data.rs
src/systems/curses/: close_items.rs  end_draw.rs  entity_render.rs  input.rs  mod.rs  render.rs  render_action_queue.rs  render_crafting.rs  render_hanged_input.rs  render_inventory.rs  render_sidebar.rs  update_render_info.rs
