[package]
name = "wotfg"
version = "0.1.0"
authors = ["Joël Lupien <jojolepro@jojolepro.com>"]
edition = "2018"

[dependencies]
pathfinding = "2.1.4"
easycurses = "0.12.2"

lazy_static = "1.4.0"

game_engine_core = "1.1.0"
planck_ecs = "1.1.2"
planck_ecs_bundle = "1.0.0"

[target.'cfg(unix)'.dependencies]
ncurses = "5.91.0"
