[package]
name = "wotfg"
version = "0.1.0"
authors = ["Joël Lupien <jojolepro@jojolepro.com>"]
edition = "2018"

[dependencies]
pathfinding = "2.1.4"
easycurses = "0.12.2"

lazy_static = "1.4.0"

game_engine_core = "1.1.0"
modular-bitfield = "0.11.2"
#minigene = { path = "../minigene" }
minigene = { git = "https://github.com/jojolepro/minigene" }
derive-new = "0.5.9"

serde = { version = "1.0", features = ["derive"] }
ron = "0.6.4"

[target.'cfg(unix)'.dependencies]
ncurses = "5.91.0"
